fixed visibility of controls

--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,7 @@ body {
 .active {
 	display: block;
 }
+
+.hidden {
+	visibility: hidden;
+}
